# TF2-Trading-CLI-tool

./: Cargo.toml
src/: main.rs
