[package]
name = "MPTF_PRICE_CHECKER"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
xlsxwriter = "0.3.1"
uuid = { version = "1.1.2", features = ["v4"] }
lazy_static = "=1.4.0"
crossterm = { version = "0.24.0", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
tui = { version ="0.18", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
